--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-/* Common Color Code #5E888C 
+/* Common Color Code #c3232a
+#5E888C
 */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
@@ -8,48 +9,309 @@
 	box-sizing: border-box;
 	font-family: 'Raleway';
 }
-header{
-    margin-top: -60px;
-  }
-  nav{
-    margin-top: 70px;
-  }
-  nav .navbar-brand h1{
-    font-size: 30px;
-    color: #262524;
-    text-transform: uppercase;
-    font-family: 'Raleway';
-    font-weight: 900;
-  }
-  nav .navbar-toggler{
-    color: #E67A41;
-  }
-  nav .navbar-toggler-icon {
-   width: 90%;
-   height: 50%;
-    color: #E67A41;
+.button-outline{
+  border: 1px solid #5E888C;
+  background-color: inherit;
+  text-decoration: none;
+  padding: 4px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  transition: 0.4s;
+
+}
+.button-outline1 {
+  color: #5E888C;
+  text-decoration: none;
+  transition: 0.4s;
+}
+.button-outline1:hover {
+  background-color: #5E888C;
+  color: white;
+  text-decoration: none;
+  transition:  all 0.4s ease;
+}
+.button2 {
+  background-color: #5E888C;
+  color: white;
+  padding: 5px 18px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 2px 2px;
+  cursor: pointer;
+
+}
+.button-button2 {
+  color: white;
+
+}
+.button-button2:hover{
+
+  text-decoration: none;
+  background-color: #4c7376;
+  color: white;
+  transition:  all 0.4s ease;
+}
+.p-btn {
+  background-color: #5E888C;
+  color: white;
+  padding: 5px 18px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 13px;
+  cursor: pointer;
+}
+.p-btn1 {
+  color: white;
+}
+.p-btn1:hover{
+
+  text-decoration: none;
+  background-color: #4c7376;
+  color: white;
+
+  transition:  all 0.4s ease;
+}
+/* ======== Nav Bar Start ======== */
+.cg-header{
+  height: 100px;
+  padding: 0 20px;
   
+}
+.logo{
+  line-height: 100px;
+  float: left;
+  text-transform: uppercase;
+  color: #262524;
+  font-weight: 900;
+}
+.logo span{
+  color: #5E888C;
+}
+.cg-menu{
+  float: right;
+  line-height: 100px;
+}
+.cg-menu a{
+  color: #262524;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 600;
+  padding: 0 10px;
+
+}
+.show-menu-btn, .hide-menu-btn{
+  transition: 0.4s;
+  font-size: 30px;
+  cursor: pointer;
+  display: none;
+  color: #5E888C;
+}
+.show-menu-btn{
+  float: right;
+}
+.show-menu-btn i{
+  line-height: 100px;
+}
+.cg-menu a:hover{
+  color: #5E888C;
+  transition: 0.7s;
+}
+.show-menu-btn:hover,
+.hide-menu-btn:hover{
+  color: #5E888C;
+}
+#chk{
+  position: absolute;
+  visibility: hidden;
+  z-index: -1111;
+}
+
+@media screen and (max-width: 800px ) {
+  .show-menu-btn{
+      display: block;
   }
-  nav .navbar-toggler-icon i{
-    color: #E67A41;
+  .hide-menu-btn{
+      display: block;
+      color: #fff;
   }
-  nav ul {
-    /* margin: 0px auto 0px; */
-    /* margin-right: 50px; */
-    position: absolute;
-    left: 35%;
+  .cg-menu{
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      background: #5E888C;
+      right: -100%;
+      top: 0;
+      text-align: center;
+      padding: 80px 0;
+      line-height: normal;
+      transition: 0.5s ;
+      z-index: 999999;
   }
-  nav ul li a{
-    font-family: 'Raleway';
-    text-transform: uppercase;
-    font-weight: 600;
-    margin-left: 20px;
-    color: #000;
-    
+  .cg-menu a{
+      display: block;
+      padding: 20px;
+      color: #fff;
+      
+  }
+  .cg-menu a:hover{
+      color: #ADD7DB;
+  }
+  .hide-menu-btn{
+      position: absolute;
+      top: 40px;
+      right: 50px;
+  }
+  #chk:checked ~ .cg-menu{
+      right: 0;
+  }
+}
+
+/* ======== FOOTER START ====== */
+/* .footer-link ul li a:hover{ */
+  /* color:  black;
+}
+.footer-logo{
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 900;
+}
+.footer-logo span{
+  color: #5E888C;
+}
+.section-footer a:hover{
+  color: #7fb3b8 !important;
+  transition: 0.4s;
+}
+.social-icon{
+  border: 1px solid #5E888C;
+  border-radius: 1px;
   
+  text-decoration: none;
+  padding: 4px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  transition: 0.4s;
+
+}
+.social-icon1 {
+  color: #5E888C;
+  text-decoration: none;
+  transition: 0.4s;
+}
+.social-icon1:hover {
+  background-color: #5E888C;
+  color: white;
+  text-decoration: none;
+  transition:  all 0.4s ease;
+}
+.copy-right p{
+  font-family: 'Roboto';
+  font-weight: 400;
+  font-size: 14px;
+  color: #888;
+}
+.mobile-footer{
+  background-color: #262524;
+  padding-top: 50px;
+  padding-bottom: 50px;
+	display: none;
+} */
+
+/* ======== FOOTER END ====== */
+.mobile-footer{
+  display: none;
+}
+.section-footer{
+  background-color: #262524;
+  padding-top: 50px;
+  padding-bottom: 40px;
+}
+.section-footer .footer-logo{
+  text-transform: uppercase;
+  color: #fff;
+  font-weight: 900;
+}
+.section-footer .footer-logo span{
+  color: #5E888C;
+}
+.section-footer a:hover{
+  color: #7fb3b8 !important;
+  transition: 0.4s;
+}
+.social-icon{
+  border: 1px solid #5E888C;
+  border-radius: 1px;
+  
+  text-decoration: none;
+  padding: 4px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  transition: 0.4s;
+
+}
+.social-icon1 {
+  color: #5E888C;
+  text-decoration: none;
+  transition: 0.4s;
+}
+.social-icon1:hover {
+  background-color: #5E888C;
+  color: white;
+  text-decoration: none;
+  transition:  all 0.4s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ========== RESPONSIVE PART START ========== */
+@media screen and (max-width: 900px){
+  .mobile-footer{
+    display: none;
+    background-color: #262524;
+    padding-bottom: 40px ;
   }
-  nav ul li a:hover{
-    color: #5E888C;
-    text-decoration: none;
-     transition:  all 0.4s ease;
-    }
+}
+@media screen and (max-width: 600px){
+  .section-footer{
+    display: none;
+    background-color: #262524;
+    padding-bottom: 40px ;
+  }
+  .mobile-footer{
+
+    display: block;
+    margin: auto;
+
+  }
+  .mobile-footer .footer-logo{
+    text-align: center;
+  }
+  .mobile-footer .social-part{
+    text-align: center;
+  }
+  .mobile-footer .footer-copyright{
+    text-align: center;
+  }
+
+}
+/* ========== RESPONSIVE PART END ========== */
