product card resize

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -80,6 +80,7 @@
     text-align: center;
     margin: 20px auto 50px;
 }
+
 .card-product-grid{
     /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     border: none;
@@ -184,7 +185,9 @@
         top: 45%;
         width: 520px;
       }
-    .cg-
+    .Product-card{
+        margin-top: 10px;
+    }
 }
 @media screen and (max-width: 600px){
     .upperhead{
@@ -208,6 +211,9 @@
       }
       .cg-hero-header p{;
           font-size: 12px;
+      }
+      .Product-card{
+        margin-top: 10px;
       }
       .cg-feature-products .cg-feature-products-header h2{
         font-size: 30px;
