--- a/assets/css/trash.css
+++ b/assets/css/trash.css
@@ -1,126 +1,206 @@
-*{
-    margin: 0;
-    padding: 0;
-
+.flex-center {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
 }
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white;
+}
+
+
+
+
+
+
+
+
 .cg-header{
-    height: 100px;
-    padding: 0 20px;
-    
+  display: none;
 }
-.logo{
-    line-height: 100px;
-    float: left;
-    text-transform: uppercase;
-    color: #262524;
-    font-weight: 900;
+.product-logo img{
+  width: 18%;
+  margin: 80px auto 90px;
+  display: flex;
+  justify-content: center;
 }
-.logo span{
-    color: #5E888C;
+.card{
+  border: none!important;
 }
-.cg-menu{
-    float: right;
-    line-height: 100px;
-}
-.cg-menu a{
-    color: #262524;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-weight: 600;
-    padding: 0 10px;
+.gallery-wrap .gallery-wrap img{
 
 }
-.show-menu-btn, .hide-menu-btn{
-    transition: 0.4s;
-    font-size: 30px;
-    cursor: pointer;
-    display: none;
-    color: #5E888C;
-}
-.show-menu-btn{
-    float: right;
-}
-.show-menu-btn i{
-    line-height: 100px;
-}
-.cg-menu a:hover{
-    color: #5E888C;
-    transition: 0.7s;
-}
-.show-menu-btn:hover,
-.hide-menu-btn:hover{
-    color: #5E888C;
-}
-#chk{
-    position: absolute;
-    visibility: hidden;
-    z-index: -1111;
+.gallery-wrap .thumbs-wrap .item-thumb img{
+  object-fit: cover;
 }
 
- 
 
-	/* these styles are for the demo, but are not required for the plugin */
-    .zoom {
-        display:inline-block;
-        position: relative;
+.zoom {
+      display:inline-block;
+      position: relative;
+      left: 13%;
     }
     
     /* magnifying glass icon */
     .zoom:after {
-        content:'';
-        display:block; 
-        width:33px; 
-        height:33px; 
-        position:absolute; 
-        top:0;
-        right:0;
-        background:url(icon.png);
+      content:'';
+      display:block; 
+      width:0px; 
+      height:0px; 
+      position:absolute; 
+      top:0;
+      right:0;
+
+
     }
 
     .zoom img {
-        display: block;
+      display: block;
     }
 
-    .zoom img::selection { background-color: transparent; }
+    .zoom img::selection { 
+      background-color: transparent; 
+    }
 
-    #ex2 img:hover { cursor: url(grab.cur), default; }
-    #ex2 img:active { cursor: url(grabbed.cur), default; }
+    #ex2 img:hover { 
+      cursor: url(grab.cur), default; 
+    }
+    #ex2 img:active { 
+      cursor: url(grabbed.cur), default; 
+    }
+.product-area-detail .content-body .title{
+  font-weight:800;
+}
+.product-area-detail .price{
+  font-family: 'Roboto';
+  font-weight: 700;
+  color: #5E888C ;
+}
+.product-area-detail .stock{
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight:400;
+  float: right;
+}
+.payment{
+  display: inline-block;
+}
+.payment-option{
+  float: right;
+  margin-top: 5px;
+  
+}
+
+.payment-option li a i{
+  color: #5E888C;
+}
+.payment-option li  {
+  list-style: none;
+  display: inline-block;
+}
+.product-description{
+  background-color: rgba(94, 137, 141, 0.10) ;
+  margin-top: 10px;
+  padding-top: 50px;
+}
+.product-description .card{
+  border-radius: 0px;
+}
+.product-description .p-des-title p{
+  font-family: 'Roboto';
+  font-size: 18px;
+  font-weight: 700;
+}
+.product-description .p-des-detail ul li{
+  font-family: 'Roboto';
+  font-size: 14px;
+  font-weight: 400;
+}
+.product-description .p-des-img img{
+  width: 100%;
+  object-fit: cover;
+}
+.product-description .best-sellers{
+  border-radius: 0px !important;
+}
+.product-description .best-sellers h5{
+  padding: 10px;
+}
 
 
-@media screen and (max-width: 800px ) {
-    .show-menu-btn{
-        display: block;
-    }
-    .hide-menu-btn{
-        display: block;
-        color: #fff;
-    }
-    .cg-menu{
-        position: fixed;
-        width: 100%;
-        height: 100vh;
-        background: #5E888C;
-        right: -100%;
-        top: 0;
-        text-align: center;
-        padding: 80px 0;
-        line-height: normal;
-        transition: 0.7s ;
-    }
-    .cg-menu a{
-        display: block;
-        padding: 20px;
-        color: #fff;
-    }
-    .cg-menu a:hover{
-        color: #ADD7DB;
-    }
-    .hide-menu-btn{
-        position: absolute;
-        top: 40px;
-        right: 50px;
-    }
-    #chk:checked ~ .cg-menu{
-        right: 0;
-    }
+
+.card-product-grid{
+  /* box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+  border: none;
+  transition: 0.4s;
+  height: 370px !important;
+  text-align: center;
+}
+.cg-feature-products .rating-stars{
+  margin-bottom: 12px;
+  
+}
+.cg-feature-products .rating-stars li i{
+  padding: 10px;
+}
+.card-product-grid:hover{
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 2px 8px 0 #5e898d;
+  transition: 0.4s;
+}
+.card-product-grid .img-wrap img{
+  object-fit: cover;
+  transition:  all 1.2s ease;
+}
+.card-product-grid .img-wrap img:hover{
+  
+  transition:  all 1.2s ease;
+}
+.card-product-grid .price{
+  color: #ACA7A7;
+  font-family: 'Roboto';
+  font-weight: 400;
+  display: block;
+  margin-bottom: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (max-width: 900px){
+  .cg-header{
+    display: block;
+  }
+  .product-logo{
+    display: none;
+  }
+  
+}
+@media screen and (max-width: 600px){
+  .cg-header{
+    display: block;
+  }
+  .product-logo{
+    display: none;
+  }
+  .product-area-detail .img-big-wrap{
+    
+  } 
+  
 }
